tests/negative/meta_readonly.disturb
n = (number){1};
n.name = 1;
